[tool.poetry]
name = "qualitube"
version = "0.1.2"
description = "A Python package for YouTube qualitative data analysis"
authors = ["Vitor Mussa <vtrmussa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[tool.poetry.scripts]
qualitube =  'qualitube.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
